@@ -58,7 +58,7 @@ public:
     Item(ItemType type, std::string path);
 
     /* Virtual use function. Does nothing. */
-    virtual void use(InputType type, int x, int y, Player &player, Map &map);
+    virtual void use(InputType type, int x, int y, World &world);
 
     /* Destructor must be virtual. */
     virtual ~Item();
